--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,5 +18,11 @@ Bundler/OrderedGems:
 Metrics/MethodLength:
   Max: 100
 
+Metrics/BlockLength:
+  Max: 50
+
+Layout/LineLength:
+  Max: 160
+
 Style/ClassAndModuleChildren:
   Enabled: false
